🎉Init Advent of Code.

--- a/2021/tests/AdventOfCode2021.Tests.Unit/AdventOfCode2021.Tests.Unit.csproj
+++ b/2021/tests/AdventOfCode2021.Tests.Unit/AdventOfCode2021.Tests.Unit.csproj
@@ -22,4 +22,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\AdventOfCode2021\AdventOfCode2021.csproj" />
+  </ItemGroup>
+
 </Project>
