Test Github Actions.

--- a/2021/tests/AdventOfCode2021.Tests.Unit/AdventOfCode2021.Tests.Unit.csproj
+++ b/2021/tests/AdventOfCode2021.Tests.Unit/AdventOfCode2021.Tests.Unit.csproj
@@ -26,4 +26,10 @@
     <ProjectReference Include="..\..\src\AdventOfCode2021\AdventOfCode2021.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Include="Inputs\**">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
