--- a/2021/src/AdventOfCode2021/AdventOfCode2021.csproj
+++ b/2021/src/AdventOfCode2021/AdventOfCode2021.csproj
@@ -1,14 +1,19 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+    <PropertyGroup>
+        <OutputType>Exe</OutputType>
+        <TargetFramework>net7.0</TargetFramework>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <Nullable>enable</Nullable>
+        <RootNamespace>AdventOfCode2021</RootNamespace>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <InternalsVisibleTo Include="AdventOfCode2021.Tests.Unit" />
-  </ItemGroup>
+    <ItemGroup>
+        <InternalsVisibleTo Include="AdventOfCode2021.Tests.Unit"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\..\..\lib\AdventOfCodeLib\AdventOfCodeLib.csproj"/>
+    </ItemGroup>
 
 </Project>
