--- a/tests/2021/AdventOfCode2021.Tests.Unit/AdventOfCode2021.Tests.Unit.csproj
+++ b/tests/2021/AdventOfCode2021.Tests.Unit/AdventOfCode2021.Tests.Unit.csproj
@@ -23,7 +23,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\AdventOfCode2021\AdventOfCode2021.csproj" />
+    <ProjectReference Include="..\..\..\src\2021\AdventOfCode2021\AdventOfCode2021.csproj" />
+    <ProjectReference Include="..\..\lib\AdventOfCodeLib\AdventOfCodeLib.csproj" />
+    <ProjectReference Include="..\..\src\2021\AdventOfCode2021\AdventOfCode2021.csproj" />
   </ItemGroup>
 
 </Project>
