--- a/tests/2022/AdventOfCode2022.Tests.Unit/AdventOfCode2022.Tests.Unit.csproj
+++ b/tests/2022/AdventOfCode2022.Tests.Unit/AdventOfCode2022.Tests.Unit.csproj
@@ -23,7 +23,9 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\src\AdventOfCode2022\AdventOfCode2022.csproj" />
+        <ProjectReference Include="..\..\..\lib\AdventOfCodeLib\AdventOfCodeLib.csproj" />
+        <ProjectReference Include="..\..\..\src\2022\AdventOfCode2022\AdventOfCode2022.csproj" />
+        <ProjectReference Include="..\..\src\2022\AdventOfCode2022\AdventOfCode2022.csproj" />
     </ItemGroup>
 
 </Project>
