--- a/lib/AdventOfCodeCli/AdventOfCodeCli.csproj
+++ b/lib/AdventOfCodeCli/AdventOfCodeCli.csproj
@@ -15,6 +15,7 @@
     <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="7.0.0" />
+      <PackageReference Include="TextCopy" Version="6.2.0" />
     </ItemGroup>
 
 </Project>
