--- a/lib/AdventOfCodeCli/AdventOfCodeCli.csproj
+++ b/lib/AdventOfCodeCli/AdventOfCodeCli.csproj
@@ -9,13 +9,15 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\AdventOfCodeLib\AdventOfCodeLib.csproj"/>
+        <ProjectReference Include="..\AdventOfCodeLib\AdventOfCodeLib.csproj" />
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0"/>
-        <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="7.0.0"/>
-        <PackageReference Include="TextCopy" Version="6.2.0"/>
+        <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="7.0.0" />
+        <PackageReference Include="Serilog" Version="3.0.1" />
+        <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
+        <PackageReference Include="TextCopy" Version="6.2.0" />
     </ItemGroup>
 
 </Project>
