feat(2016): Start 2016 day 1 puzzle

--- a/src/2016/AdventOfCode2016/AdventOfCode2016.csproj
+++ b/src/2016/AdventOfCode2016/AdventOfCode2016.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\lib\AdventOfCodeLib\AdventOfCodeLib.csproj" />
+  </ItemGroup>
+
 </Project>
