chore(settings): Update session value [skip-ci]

--- a/lib/AdventOfCodeCli/appsettings.json
+++ b/lib/AdventOfCodeCli/appsettings.json
@@ -6,6 +6,7 @@
             "Microsoft": "Information"
         }
     },
+    "Session": "<session value>",
     "Directories": {
         "src": "C:/Projects/Advent-Of-Code/src",
         "tests": "C:/Projects/Advent-Of-Code/tests"
