project(2023, F#): Add some f# code

--- a/tests/2023/AdventOfCode2023.Tests.Unit/AdventOfCode2023.Tests.Unit.csproj
+++ b/tests/2023/AdventOfCode2023.Tests.Unit/AdventOfCode2023.Tests.Unit.csproj
@@ -24,6 +24,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\..\src\2023\AdventOfCode2023.FSharp\AdventOfCode2023.FSharp.fsproj" />
       <ProjectReference Include="..\..\..\src\2023\AdventOfCode2023\AdventOfCode2023.csproj" />
     </ItemGroup>
 
