--- a/src/2023/AdventOfCode2023.FSharp/AdventOfCode2023.FSharp.fsproj
+++ b/src/2023/AdventOfCode2023.FSharp/AdventOfCode2023.FSharp.fsproj
@@ -6,7 +6,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <Compile Include="Fay1.fs"/>
+        <Compile Include="Fays.fs"/>
     </ItemGroup>
 
     <ItemGroup>
