fix(aoc): Update cli tool

--- a/dotnet/AdventOfCode.Cli/appsettings.json
+++ b/dotnet/AdventOfCode.Cli/appsettings.json
@@ -8,7 +8,6 @@
     },
     "Session": "<session value>",
     "Directories": {
-        "src": "C:/Projects/Advent-Of-Code/src",
-        "tests": "C:/Projects/Advent-Of-Code/tests"
+        "src": "C:/Projects/Advent-Of-Code/dotnet"
     }
 }
