--- a/dotnet/2024/AdventOfCode.Y2024/AdventOfCode.Y2024.csproj
+++ b/dotnet/2024/AdventOfCode.Y2024/AdventOfCode.Y2024.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\..\AdventOfCode.Lib\AdventOfCode.Lib.csproj" />
+    </ItemGroup>
+
 </Project>
