feat(fsharp, 2024): solve fay 1

--- a/dotnet/2024/AdventOfCode.Y2024.Tests.Unit/AdventOfCode.Y2024.Tests.Unit.csproj
+++ b/dotnet/2024/AdventOfCode.Y2024.Tests.Unit/AdventOfCode.Y2024.Tests.Unit.csproj
@@ -20,6 +20,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\AdventOfCode.Y2024.FSharp\AdventOfCode.Y2024.FSharp.fsproj" />
         <ProjectReference Include="..\AdventOfCode.Y2024\AdventOfCode.Y2024.csproj"/>
     </ItemGroup>
 
