--- a/dotnet/2024/AdventOfCode.Y2024.FSharp/AdventOfCode.Y2024.FSharp.fsproj
+++ b/dotnet/2024/AdventOfCode.Y2024.FSharp/AdventOfCode.Y2024.FSharp.fsproj
@@ -6,7 +6,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <Compile Include="Library.fs"/>
+        <Compile Include="Fays.fs" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\..\AdventOfCode.Lib\AdventOfCode.Lib.csproj" />
     </ItemGroup>
 
 </Project>
