--- a/typescript/tsconfig.json
+++ b/typescript/tsconfig.json
@@ -1,10 +1,12 @@
 {
     "compilerOptions": {
         "target": "ESNext",
-        "module": "CommonJS", 
+        "module": "ESNext",
         "moduleResolution": "node",
         "esModuleInterop": true,
         "skipLibCheck": true,
-        "strict": true
+        "strict": true,
+        "resolveJsonModule": true,
+        "allowSyntheticDefaultImports": true
     }
 }
