--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -5,6 +5,8 @@ on:
     branches: ["main"]
     paths-ignore:
       - python/**
+      - golang/**
+      - typescript/**
 
   pull_request:
     branches: ["main"]
