--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -13,7 +13,7 @@ on:
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
@@ -27,6 +27,6 @@ jobs:
       - name: Build
         run: dotnet build --no-restore
         working-directory: dotnet
-      - name: Test
-        run: dotnet test --no-build --verbosity normal
-        working-directory: dotnet
+      # - name: Test
+        # run: dotnet test --no-build --verbosity normal
+        # working-directory: dotnet
