--- a/dotnet/AdventOfCode/AdventOfCode.csproj
+++ b/dotnet/AdventOfCode/AdventOfCode.csproj
@@ -5,6 +5,7 @@
         <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <UserSecretsId>da709531-ed3e-44fb-901a-b008b109edd8</UserSecretsId>
     </PropertyGroup>
 
     <ItemGroup>
@@ -19,12 +20,28 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.0"/>
+      <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="9.0.0"/>
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.0"/>
+      <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.0"/>
+      <PackageReference Include="Serilog" Version="4.1.0"/>
+      <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0"/>
+      <PackageReference Include="TextCopy" Version="6.2.1"/>
       <PackageReference Include="Spectre.Console" Version="0.49.1" />
       <PackageReference Include="Spectre.Console.Analyzer" Version="1.0.0">
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
       <PackageReference Include="Spectre.Console.Cli" Version="0.49.1" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <None Update="appsettings.json">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+        <None Update="appsettings.json">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
     </ItemGroup>
 
 </Project>
