--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -1,8 +1,9 @@
-black==24.4.2
-click==8.1.7
+black==25.11.0
+click==8.3.1
 colorama==0.4.6
-mypy-extensions==1.0.0
-packaging==24.0
+mypy_extensions==1.1.0
+packaging==25.0
 pathspec==0.12.1
-platformdirs==4.2.2
-setuptools==70.0.0
+platformdirs==4.5.0
+pytokens==0.3.0
+setuptools==80.9.0
