--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,12 +21,15 @@ jobs:
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: 10.x
+          
       - name: Restore dependencies
         run: dotnet restore
         working-directory: dotnet
+        
       - name: Build
         run: dotnet build --no-restore
         working-directory: dotnet
+        
       - name: Test
-        run: dotnet test --no-build --verbosity normal
+        run: dotnet test --no-build --verbosity minimal
         working-directory: dotnet
